@@ -1,3 +1,6 @@
+  26 Aug 2012; Manuel Rüger (mrueg) gentoo@rueg.eu classifier-1.3.3.ebuild:
+  dev-ruby/classifier: Use ruby_add_{r,b}depend
+
 *classifier-1.3.3 (25 Aug 2012)
 
   25 Aug 2012; Manuel Rüger (mrueg) gentoo@rueg.eu +classifier-1.3.3.ebuild,
